Fix crash when right-clicking in the empty part of a ListSelect

As described in 68efacfc3, right-clicking into the empty part of a
ListSelect would crash kphotoalbum. The bug was introduced by commit
68efacfc3 which was first released in v5.7.0.

BUG: 472523