CHANGELOG.md
@@ -45,6 +45,7 @@ The change log for older releases (before 5.9.0) can be found in CHANGELOG.old.
 
 ### Fixed
  - Fix issue with KPhotoAlbum not asking to save before exit (#472427)
+ - Fix crash when right-clicking in the empty space of the tag lists of the annotation dialog (#472523)
 
 ### Removed
 
